--- a/index.html
+++ b/index.html
@@ -39,5 +39,12 @@
         <h2>Use the space, reader!</h2>
 
         <p>The first thing we need to do is be able to represent <span class="steven-fg">Steven</span> and <span class="reina-fg">Reina</span> in virtual space:</p>
+
+        <script src="vendor/pixi/pixi.js"></script>
+
+        <script src="src/textures.js"></script>
+        <script src="src/input.js"></script>
+        <script src="src/game.js"></script>
+        <script src="src/init.js"></script>
     </body>
 </html>
