--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
         <script src="src/textures.js"></script>
         <script src="src/input.js"></script>
+        <script src="src/physics.js"></script>
         <script src="src/game.js"></script>
         <script src="src/init.js"></script>
     </body>
