--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
 
-        <link rel="stylesheet" href="/harrison.css">
-        <link rel="stylesheet" href="/collision.css">
+        <link rel="stylesheet" href="harrison.css">
+        <link rel="stylesheet" href="collision.css">
     </head>
 
     <body>
