--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 
         <p>Now that we know THAT our two friends are overlapping, we need to actually do something about it. Enter... collision resolution!</p>
 
+        <canvas id="collision"></canvas>
+
         <script src="vendor/pixi/pixi.js"></script>
 
         <script src="src/textures.js"></script>
