Fix some floating point inaccuracies

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <h2>Close the overlap</h2>
 
-        <p>Our next step is to find out a way to check if <span class="steven-fg">Steven</span> or <span class="reina-fg">Reina</span> are touching each other.</p>
+        <p>Our next step is to to check if <span class="steven-fg">Steven</span> or <span class="reina-fg">Reina</span> are touching each other.</p>
 
         <canvas id="overlap"></canvas>
 
